@@ -593,114 +593,6 @@ compile_suspend() {
 	rm -rf bincache suspend-0.5
 }
 
-compile_modutils() {
-	# I've disabled dietlibc support for the time being since the
-	# version we use misses a few needed system calls.
-
-	local ARGS
-	if [ ! -f "${MODUTILS_BINCACHE}" ]
-	then
-		[ ! -f "${MODUTILS_SRCTAR}" ] &&
-			gen_die "Could not find modutils source tarball: ${MODUTILS_SRCTAR}!"
-		cd "${TEMP}"
-		rm -rf "${MODUTILS_DIR}"
-		/bin/tar -jxpf "${MODUTILS_SRCTAR}"
-		[ ! -d "${MODUTILS_DIR}" ] &&
-			gen_die "Modutils directory ${MODUTILS_DIR} invalid!"
-		cd "${MODUTILS_DIR}"
-		print_info 1 "modutils: >> Configuring..."
-
-#		if [ "${USE_DIETLIBC}" -eq '1' ]
-#		then
-#			extract_dietlibc_bincache
-#			OLD_CC="${UTILS_CC}"
-#			UTILS_CC="${TEMP}/diet/bin/diet ${UTILS_CC}"
-#		fi
-
-		export_utils_args
-		export ARCH=${ARCH}
-		./configure --disable-combined --enable-insmod-static >> ${DEBUGFILE} 2>&1 ||
-			gen_die 'Configuring modutils failed!'
-		unset_utils_args
-
-		print_info 1 'modutils: >> Compiling...'
-		compile_generic all utils
-
-#		if [ "${USE_DIETLIBC}" -eq '1' ]
-#		then
-#			clean_dietlibc_bincache
-#			UTILS_CC="${OLD_CC}"
-#		fi
-
-		print_info 1 'modutils: >> Copying to cache...'
-		[ -f "${TEMP}/${MODUTILS_DIR}/insmod/insmod.static" ] ||
-			gen_die 'insmod.static does not exist after the compilation of modutils!'
-		strip "${TEMP}/${MODUTILS_DIR}/insmod/insmod.static" ||
-			gen_die 'Could not strip insmod.static!'
-		bzip2 "${TEMP}/${MODUTILS_DIR}/insmod/insmod.static" ||
-			gen_die 'Compression of insmod.static failed!'
-		mv "${TEMP}/${MODUTILS_DIR}/insmod/insmod.static.bz2" "${MODUTILS_BINCACHE}" ||
-			gen_die 'Could not move the compressed insmod binary to the package cache!'
-
-		cd "${TEMP}"
-		rm -rf "${MODULE_INIT_TOOLS_DIR}" > /dev/null
-	fi
-}
-
-compile_module_init_tools() {
-	# I've disabled dietlibc support for the time being since the
-	# version we use misses a few needed system calls.
-
-	local ARGS
-	if [ ! -f "${MODULE_INIT_TOOLS_BINCACHE}" ]
-	then
-		[ ! -f "${MODULE_INIT_TOOLS_SRCTAR}" ] &&
-			gen_die "Could not find module-init-tools source tarball: ${MODULE_INIT_TOOLS_SRCTAR}"
-		cd "${TEMP}"
-		rm -rf "${MODULE_INIT_TOOLS_DIR}"
-		/bin/tar -jxpf "${MODULE_INIT_TOOLS_SRCTAR}"
-		[ ! -d "${MODULE_INIT_TOOLS_DIR}" ] &&
-			gen_die "Module-init-tools directory ${MODULE_INIT_TOOLS_DIR} is invalid"
-		cd "${MODULE_INIT_TOOLS_DIR}"
-		print_info 1 'module-init-tools: >> Configuring'
-
-#		if [ "${USE_DIETLIBC}" -eq '1' ]
-#		then
-#			extract_dietlibc_bincache
-#			OLD_CC="${UTILS_CC}"
-#			UTILS_CC="${TEMP}/diet/bin/diet ${UTILS_CC}"
-#		fi
-
-		export_utils_args
-		./configure >> ${DEBUGFILE} 2>&1 ||
-			gen_die 'Configure of module-init-tools failed!'
-		unset_utils_args
-		print_info 1 '                   >> Compiling...'
-		compile_generic "all" utils
-
-# 		if [ "${USE_DIETLIBC}" -eq '1' ]
-#		then
-#			clean_dietlibc_bincache
-#			UTILS_CC="${OLD_CC}"
-#		fi
-
-		print_info 1 '                   >> Copying to cache...'
-		[ -f "${TEMP}/${MODULE_INIT_TOOLS_DIR}/insmod.static" ] ||
-			gen_die 'insmod.static does not exist after the compilation of module-init-tools!'
-		strip "${TEMP}/${MODULE_INIT_TOOLS_DIR}/insmod.static" ||
-			gen_die 'Could not strip insmod.static!'
-		bzip2 "${TEMP}/${MODULE_INIT_TOOLS_DIR}/insmod.static" ||
-			gen_die 'Compression of insmod.static failed!'
-		[ -f "${TEMP}/${MODULE_INIT_TOOLS_DIR}/insmod.static.bz2" ] ||
-			gen_die 'Could not find compressed insmod.static.bz2 binary!'
-		mv "${TEMP}/${MODULE_INIT_TOOLS_DIR}/insmod.static.bz2" "${MODULE_INIT_TOOLS_BINCACHE}" ||
-			gen_die 'Could not move the compressed insmod binary to the package cache!'
-
-		cd "${TEMP}"
-		rm -rf "${MODULE_INIT_TOOLS_DIR}" > /dev/null
-	fi
-}
-
 compile_devfsd() {
 	# I've disabled dietlibc support for the time being since the
 	# version we use misses a few needed system calls.
