@@ -197,8 +197,6 @@ determine_real_args() {
 
 	CACHE_DIR=`arch_replace "${CACHE_DIR}"`
 	BUSYBOX_BINCACHE=`cache_replace "${BUSYBOX_BINCACHE}"`
-	MODULE_INIT_TOOLS_BINCACHE=`cache_replace "${MODULE_INIT_TOOLS_BINCACHE}"`
-	MODUTILS_BINCACHE=`cache_replace "${MODUTILS_BINCACHE}"`
 	DIETLIBC_BINCACHE=`cache_replace "${DIETLIBC_BINCACHE}"`
 	DIETLIBC_BINCACHE_TEMP=`cache_replace "${DIETLIBC_BINCACHE_TEMP}"`
 	DEVFSD_BINCACHE=`cache_replace "${DEVFSD_BINCACHE}"`
@@ -216,8 +214,6 @@ determine_real_args() {
 	DEFAULT_KERNEL_CONFIG=`arch_replace "${DEFAULT_KERNEL_CONFIG}"`
 	BUSYBOX_CONFIG=`arch_replace "${BUSYBOX_CONFIG}"`
 	BUSYBOX_BINCACHE=`arch_replace "${BUSYBOX_BINCACHE}"`
-	MODULE_INIT_TOOLS_BINCACHE=`arch_replace "${MODULE_INIT_TOOLS_BINCACHE}"`
-	MODUTILS_BINCACHE=`arch_replace "${MODUTILS_BINCACHE}"`
 	DIETLIBC_BINCACHE=`arch_replace "${DIETLIBC_BINCACHE}"`
 	DIETLIBC_BINCACHE_TEMP=`arch_replace "${DIETLIBC_BINCACHE_TEMP}"`
 	DEVFSD_BINCACHE=`arch_replace "${DEVFSD_BINCACHE}"`
