@@ -92,16 +92,6 @@ BUSYBOX_SRCTAR="${GK_SHARE}/pkg/busybox-${BUSYBOX_VER}.tar.bz2"
 # Directory created after busybox tarball is extracted
 BUSYBOX_DIR="busybox-${BUSYBOX_VER}"
 
-MODULE_INIT_TOOLS_VER="0.9.15-pre4"
-MODULE_INIT_TOOLS_SRCTAR="${GK_SHARE}/pkg/module-init-tools-${MODULE_INIT_TOOLS_VER}.tar.bz2"
-MODULE_INIT_TOOLS_DIR="module-init-tools-${MODULE_INIT_TOOLS_VER}"
-MODULE_INIT_TOOLS_BINCACHE="%%CACHE%%/insmod-%%ARCH%%-static-2.6.bz2"
-
-MODUTILS_VER="2.4.26"
-MODUTILS_SRCTAR="${GK_SHARE}/pkg/modutils-${MODUTILS_VER}.tar.bz2"
-MODUTILS_DIR="modutils-${MODUTILS_VER}"
-MODUTILS_BINCACHE="%%CACHE%%/insmod-%%ARCH%%-static-2.4.bz2"
-
 DIETLIBC_VER="0.27"
 DIETLIBC_SRCTAR="${GK_SHARE}/pkg/dietlibc-${DIETLIBC_VER}.tar.bz2"
 DIETLIBC_DIR="dietlibc-${DIETLIBC_VER}"
