@@ -327,7 +327,7 @@ CONFIG_FINDFS=y
 #
 # Linux Module Utilities
 #
-# CONFIG_INSMOD is not set
+CONFIG_INSMOD=y
 # CONFIG_FEATURE_INSMOD_VERSION_CHECKING is not set
 # CONFIG_FEATURE_INSMOD_KSYMOOPS_SYMBOLS is not set
 # CONFIG_FEATURE_INSMOD_LOADINKMEM is not set
